# BAK

./: README.md  rules.md
ai/policy_search/: .gitignore  Cargo.toml  LICENSE  README.md
ai/policy_search/benches/: bench.rs
ai/policy_search/records/: double_policies_scored_against_10random_20thirtyplus_70fiftyplus_meta.jsonl.bz2  double_policies_scored_against_10random_20thirtyplus_70fiftyplus_meta_part2.jsonl.bz2  double_policies_scored_against_20random_60thirtyplus_20fiftyplus_meta.jsonl.bz2  policies_above_0.3_score_vs_random_policy.jsonl.bz2  policies_scored_against_20random_60thirtyplus_20fiftyplus_meta.jsonl.bz2
ai/policy_search/src/: lib.rs  main.rs
