[package]
name = "bak_card_game"
version = "0.1.0"
authors = ["houeland"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false

[dependencies]
rand = "0.8.2"
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.61"
histogram = "0.6"
